traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-gateway
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: traefik
      port: 9000
      targetPort: 9000
      protocol: TCP
  type: LoadBalancer
