traefik/dashboard.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-lb.xmple.io`)
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
    options:
      name: mintls13
