traefik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: traefik
  hostnames:
    - traefik-gw.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: traefik
          port: 8080
          kind: Service
